--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ body {
   overflow: hidden;
 }
 
-.player-0-panel,
-.player-1-panel {
+.player-1-panel,
+.player-2-panel {
   width: 50%;
   float: left;
   height: 600px;
@@ -107,11 +107,15 @@ body {
   font-size: 30px;
 }
 
+.material-icons {
+  vertical-align: middle;
+}
+
 button {
   position: absolute;
   width: 200px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 40%;
+  /* transform: translateX(-50%); */
   color: #555;
   background: none;
   border: none;
@@ -134,7 +138,7 @@ button:focus {
 i {
   color: #eb4d4d;
   display: inline-block;
-  margin-right: 15px;
+  margin-right: 10px;
   font-size: 32px;
   line-height: 1;
   vertical-align: text-top;
@@ -167,4 +171,10 @@ i {
 .winner .player-name {
   font-weight: 300;
   color: #eb4d4d;
+}
+
+.display-message {
+  /* background-color: black; */
+  color: white;
+  font-size: 24px;
 }
