--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   font-family: Lato;
   font-weight: 300;
   position: relative;
-  height: 100vh;
+  height: 95vh;
   color: #555;
 }
 
@@ -111,7 +111,8 @@ body {
   vertical-align: middle;
 }
 
-button {
+button,
+#displayScoreWin {
   position: absolute;
   width: 200px;
   left: 40%;
@@ -154,6 +155,18 @@ i {
 }
 .btn-hold {
   top: 467px;
+}
+.btn-hold {
+  top: 467px;
+}
+#displayScoreWin {
+  top: 570px;
+  text-transform: none;
+  cursor: default;
+  left: 43%;
+}
+#scoreWin {
+  font-weight: 600;
 }
 
 .dice {
